--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
     <div class="nav-bar">
         <div class="logo">Snapshot</div>
-        <ul class="nav-links">
+        <ul class="nav-links" id="toggle">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Gallery</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
-        <i class='bx bx-menu'></i>
+        <i class='bx bx-menu' onclick="toggle()" id="hamburger"></i>
     </div>
 
     <!-- Hero section -->
@@ -105,5 +105,14 @@
         </div>
         <h6>Copyright &copy; 2021 Zuri Training.</h6>
     </div>
+
+    <script>
+
+        function toggle(){
+          var navBar = document.getElementById('toggle');
+          navBar.classList.toggle('toggler');
+        }
+        
+    </script>
 </body>
 </html>
